@@ -1,3 +1,7 @@
+2007-07-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/reader.R (readPDF): Added PDF reader.
+
 2007-07-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* DESCRIPTION: Moved proxy from Depends to Imports to avoid name clashes.
